_includes/manuals/1.14/3.2.2_installer_options.md

The installer is a collection of Puppet modules, which have a large number of parameters available to customize the configuration.  Parameters can be set by running `foreman-installer` with arguments, e.g. `--foreman-db-type`, changing settings in interactive mode or by setting up an answers file.

The precedence for settings is for those set by arguments to foreman-installer or interactive mode, then the answers file, then the Puppet manifest defaults.

#### foreman-installer arguments

Every parameter available in the installer can be set using command line arguments to `foreman-installer`.  Run `foreman-installer --help` for most options, or `foreman-installer --full-help` for a list of every available option.

When running the installer, all arguments passed on the command line will be persisted by default to `/etc/foreman-installer/scenarios.d/foreman-answers.yaml` and used automatically on subsequent runs, without needing to specify those arguments again.  This persistence can be disabled with the `-b` option.

#### Interactive mode

The installer also provides a text driven interface to customize configuration parameters, and can be run by executing:

{% highlight bash %}
foreman-installer -i
{% endhighlight %}

#### Plugins and compute resources

The installer contains a number of high level modules (e.g. "foreman", "puppet") and additionally a number of smaller modules for additional functionality, such as plugins and compute resource support.  These can be added with the "--enable" switches, or the default options can be disabled with "--no-enable" switches.

More information about compute resources can be found in the [Compute Resources section](/manuals/{{page.version}}/index.html#5.2ComputeResources) and plugins in the [Plugins section](/manuals/{{page.version}}/index.html#6.Plugins).

<!-- Generated by hand from `foreman-installer -h | grep enable-` -->
<div>
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Option</th>
        <th>Description</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman</td>
        <td>Enable 'foreman' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-cli</td>
        <td>Enable 'foreman_cli' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-ec2</td>
        <td>Enable 'foreman_compute_ec2' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-gce</td>
        <td>Enable 'foreman_compute_gce' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-libvirt</td>
        <td>Enable 'foreman_compute_libvirt' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-openstack</td>
        <td>Enable 'foreman_compute_openstack' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-ovirt</td>
        <td>Enable 'foreman_compute_ovirt' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-rackspace</td>
        <td>Enable 'foreman_compute_rackspace' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-vmware</td>
        <td>Enable 'foreman_compute_vmware' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-ansible</td>
        <td>Enable 'foreman_plugin_ansible' puppet module (<a href="/plugins/foreman_ansible/">foreman_ansible</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-azure</td>
        <td>Enable 'foreman_plugin_azure' puppet module (<a href="https://github.com/theforeman/foreman_azure">foreman_azure</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-bootdisk</td>
        <td>Enable 'foreman_plugin_bootdisk' puppet module (<a href="https://github.com/theforeman/foreman_bootdisk">foreman_bootdisk</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-chef</td>
        <td>Enable 'foreman_plugin_chef' puppet module (<a href="/plugins/foreman_chef/">foreman_chef</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-cockpit</td>
        <td>Enable 'foreman_plugin_cockpit' puppet module (<a href="/plugins/foreman_cockpit/">foreman_cockpit</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-default-hostgroup</td>
        <td>Enable 'foreman_plugin_default_hostgroup' puppet module (<a href="https://github.com/GregSutcliffe/foreman_default_hostgroup">foreman_default_hostgroup</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-dhcp-browser</td>
        <td>Enable 'foreman_plugin_dhcp_browser' puppet module (<a href="https://github.com/theforeman/foreman_dhcp_browser">foreman_dhcp_browser</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-digitalocean</td>
        <td>Enable 'foreman_plugin_digitalocean' puppet module (<a href="https://github.com/theforeman/foreman-digitalocean">foreman_digitalocean</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-discovery</td>
        <td>Enable 'foreman_plugin_discovery' puppet module (<a href="/plugins/foreman_discovery">foreman_discovery</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-docker</td>
        <td>Enable 'foreman_plugin_docker' puppet module (<a href="/plugins/foreman_docker">foreman_docker</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-expire-hosts</td>
        <td>Enable 'foreman_plugin_expire_hosts' puppet module (<a href="https://github.com/theforeman/foreman_expire_hosts">foreman_expire_hosts</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-hooks</td>
        <td>Enable 'foreman_plugin_hooks' puppet module (<a href="https://github.com/theforeman/foreman_hooks">foreman_hooks</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-host-extra-validator</td>
        <td>Enable 'foreman_plugin_host_extra_validator' puppet module (<a href="https://github.com/theforeman/foreman_host_extra_validator">foreman_host_extra_validator</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-memcache</td>
        <td>Enable 'foreman_plugin_memcache' puppet module (<a href="https://github.com/theforeman/foreman_memcache">foreman_memcache</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-openscap</td>
        <td>Enable 'foreman_plugin_openscap' puppet module (<a href="/plugins/foreman_openscap">foreman_openscap</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-ovirt-provision</td>
        <td>Enable 'foreman_plugin_ovirt_provision' puppet module (<a href="https://github.com/theforeman/ovirt_provision_plugin">ovirt_provision_plugin</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-puppetdb</td>
        <td>Enable 'foreman_plugin_puppetdb' puppet module (<a href="https://github.com/theforeman/puppetdb_foreman">puppetdb_foreman</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-remote-execution</td>
        <td>Enable 'foreman_plugin_remote_execution' puppet module (<a href="/plugins/foreman_remote_execution/">foreman_remote_execution</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-salt</td>
        <td>Enable 'foreman_plugin_salt' puppet module (<a href="/plugins/foreman_salt/">foreman_salt</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-setup</td>
        <td>Enable 'foreman_plugin_setup' puppet module (<a href="https://github.com/theforeman/foreman_setup">foreman_setup</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-tasks</td>
        <td>Enable 'foreman_plugin_tasks' puppet module (<a href="https://github.com/theforeman/foreman-tasks">foreman-tasks</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-templates</td>
        <td>Enable 'foreman_plugin_templates' puppet module (<a href="https://github.com/theforeman/foreman_templates">foreman_templates</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy</td>
        <td>Enable 'foreman_proxy' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-abrt</td>
        <td>Enable 'foreman_proxy_plugin_abrt' puppet module (<a href="https://github.com/theforeman/smart_proxy_abrt">smart_proxy_abrt</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-ansible</td>
        <td>Enable 'foreman_proxy_plugin_ansible' puppet module (<a href="/plugins/foreman_ansible/">smart_proxy_ansible</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-chef</td>
        <td>Enable 'foreman_proxy_plugin_chef' puppet module (<a href="/plugins/foreman_chef/">smart_proxy_chef</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dhcp-infoblox</td>
        <td>Enable 'foreman_proxy_plugin_dhcp_infoblox' puppet module (<a href="https://github.com/theforeman/smart_proxy_dhcp_infoblox">smart_proxy_dhcp_infoblox</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-discovery</td>
        <td>Enable 'foreman_proxy_plugin_discovery' puppet module (<a href="/plugins/foreman_discovery/">smart_proxy_discovery</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dns-infoblox</td>
        <td>Enable 'foreman_proxy_plugin_dns_infoblox' puppet module (<a href="https://github.com/theforeman/smart_proxy_dns_infoblox">smart_proxy_dns_infoblox</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dns-powerdns</td>
        <td>Enable 'foreman_proxy_plugin_dns_powerdns' puppet module (<a href="https://github.com/theforeman/smart_proxy_dns_powerdns">smart_proxy_dns_powerdns</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dynflow</td>
        <td>Enable 'foreman_proxy_plugin_dynflow' puppet module (<a href="https://github.com/theforeman/smart_proxy_dynflow">smart_proxy_dynflow</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-openscap</td>
        <td>Enable 'foreman_proxy_plugin_openscap' puppet module (<a href="/plugins/foreman_openscap">smart_proxy_openscap</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-pulp</td>
        <td>Enable 'foreman_proxy_plugin_pulp' puppet module (<a href="https://github.com/theforeman/smart-proxy-pulp">smart_proxy_pulp</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-remote-execution-ssh</td>
        <td>Enable 'foreman_proxy_plugin_remote_execution_ssh' puppet module (<a href="/plugins/foreman_remote_execution/">smart_proxy_remote_execution_ssh</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-salt</td>
        <td>Enable 'foreman_proxy_plugin_salt' puppet module (<a href="/plugins/foreman_salt/">smart_proxy_salt</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-puppet</td>
        <td>Enable 'puppet' puppet module</td>
      </tr>
    </tbody>
  </table>
</div>

#### Available options

**Note:** When you can specify a hash, you need to specify each option individually to `foreman-installer`.

For example the hash `{show_diff => true, stringify_facts => false}` for `--puppet-server-additional-settings` becomes `--puppet-server-additional-settings=show_diff:true --puppet-server-additional-settings=stringify_facts:false`.

<!-- Generated with:
kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
-->
<div id="all-installer-options">
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Option</th>
        <th>Description</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-email</td>
        <td>E-mail address of the initial admin user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-first-name</td>
        <td>First name of the initial admin user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-last-name</td>
        <td>Last name of the initial admin user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-password</td>
        <td>Password of the initial admin user, default is randomly generated</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-username</td>
        <td>Username for the initial admin user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-app-root</td>
        <td>Name of foreman root directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-authentication</td>
        <td>Enable user authentication. Initial credentials are set using admin_username and admin_password.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-client-ssl-ca</td>
        <td>Defines the SSL CA used to communicate with Foreman Proxies</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-client-ssl-cert</td>
        <td>Defines the SSL certificate used to communicate with Foreman Proxies</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-client-ssl-key</td>
        <td>Defines the SSL private key used to communicate with Foreman Proxies</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-configure-epel-repo</td>
        <td>If disabled the EPEL repo will not be configured on Red Hat family systems.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-configure-scl-repo</td>
        <td>If disabled the SCL repo will not be configured on Red Hat clone systems. (Currently only installs repos for CentOS and Scientific)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-custom-repo</td>
        <td>No need to change anything here by default if set to true, no repo will be added by this module, letting you to set it to some custom location.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-adapter</td>
        <td>Database 'production' adapter</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-database</td>
        <td>Database 'production' database (e.g. foreman)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-host</td>
        <td>Database 'production' host</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-manage</td>
        <td>if enabled, will install and configure the database server on this host</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-manage-rake</td>
        <td>if enabled, will run rake jobs, which depend on the database</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-password</td>
        <td>Database 'production' password (default is random)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-pool</td>
        <td>Database 'production' size of connection pool</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-port</td>
        <td>Database 'production' port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-sslmode</td>
        <td>Database 'production' ssl mode</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-type</td>
        <td>Database 'production' type</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-username</td>
        <td>Database 'production' user (e.g. foreman)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-conf</td>
        <td>Email configuration file under /etc/foreman, defaults to email.yaml</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-config-method</td>
        <td>Configure email settings in database (1.14+) or configuration file (deprecated)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-delivery-method</td>
        <td>Email delivery method</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-smtp-address</td>
        <td>SMTP server hostname, when delivery method is SMTP</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-smtp-authentication</td>
        <td>SMTP authentication method</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-smtp-domain</td>
        <td>SMTP HELO domain</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-smtp-password</td>
        <td>Password for SMTP server auth, if authentication is enabled</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-smtp-port</td>
        <td>SMTP port, defaults to 25</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-smtp-user-name</td>
        <td>Username for SMTP server auth, if authentication is enabled</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-email-source</td>
        <td>Template to use for email configuration file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-foreman-url</td>
        <td>URL on which foreman is going to run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-gpgcheck</td>
        <td>Turn on/off gpg check in repo files (effective only on RedHat family systems)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-group</td>
        <td>Primary group for the Foreman user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-http-keytab</td>
        <td>Path to keytab to be used for Kerberos authentication on the WebUI</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-initial-location</td>
        <td>Name of an initial location</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-initial-organization</td>
        <td>Name of an initial organization</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-ipa-authentication</td>
        <td>Enable configuration for external authentication via IPA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-ipa-manage-sssd</td>
        <td>If ipa_authentication is true, should the installer manage SSSD? You can disable it if you use another module for SSSD configuration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-keepalive</td>
        <td>Enable KeepAlive setting of Apache?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-keepalive-timeout</td>
        <td>KeepAliveTimeout setting of Apache (Seconds the server will wait for subsequent requests on a persistent connection)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-locations-enabled</td>
        <td>Enable locations?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-loggers</td>
        <td>Enable or disable specific loggers, e.g. {"sql" => true}</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-logging-level</td>
        <td>Logging level of the Foreman application</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-manage-user</td>
        <td>Controls whether foreman module will manage the user on the system. (default true)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-max-keepalive-requests</td>
        <td>MaxKeepAliveRequests setting of Apache (Number of requests allowed on a persistent connection)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-active</td>
        <td>Enable OAuth authentication for REST API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-consumer-key</td>
        <td>OAuth consumer key</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-consumer-secret</td>
        <td>OAuth consumer secret</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-map-users</td>
        <td>Should Foreman use the foreman_user header to identify API user?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-organizations-enabled</td>
        <td>Enable organizations?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-pam-service</td>
        <td>PAM service used for host-based access control in IPA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger</td>
        <td>Configure foreman via apache and passenger</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-interface</td>
        <td>Defines which network interface passenger should listen on, undef means all interfaces</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-min-instances</td>
        <td>Minimum passenger worker instances to keep when application is idle.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-prestart</td>
        <td>Pre-start the first passenger worker instance process during httpd start.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-ruby</td>
        <td>Ruby interpreter used to run Foreman under Passenger</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-ruby-package</td>
        <td>Package to install to provide Passenger libraries for the active Ruby interpreter</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-start-timeout</td>
        <td>Amount of seconds to wait for Ruby application boot.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-prefix</td>
        <td>String which is prepended to the plugin package names</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-version</td>
        <td>Foreman plugins package version, it's passed to ensure parameter of package resource can be set to 'installed', 'latest', 'present' only</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-puppet-home</td>
        <td>Puppet home directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-puppet-ssldir</td>
        <td>Puppet SSL directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-puppetrun</td>
        <td>Should Foreman be able to start Puppet runs on nodes</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-rails-env</td>
        <td>Rails environment of foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-repo</td>
        <td>This can be stable, nightly or a specific version i.e. 1.7</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-selinux</td>
        <td>When undef, foreman-selinux will be installed if SELinux is enabled setting to false/true will override this check (e.g. set to false on 1.1)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-port</td>
        <td>Defines Apache port for HTTP requests</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-ca</td>
        <td>Defines Apache mod_ssl SSLCACertificateFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-cert</td>
        <td>Defines Apache mod_ssl SSLCertificateFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-certs-dir</td>
        <td>Defines Apache mod_ssl SSLCACertificatePath setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-chain</td>
        <td>Defines Apache mod_ssl SSLCertificateChainFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-crl</td>
        <td>Defines the Apache mod_ssl SSLCARevocationFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-key</td>
        <td>Defines Apache mod_ssl SSLCertificateKeyFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-port</td>
        <td>Defines Apache port for HTTPS reqquests</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-serveraliases</td>
        <td>Server aliases of the VirtualHost in the webserver</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-servername</td>
        <td>Server name of the VirtualHost in the webserver</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-ssl</td>
        <td>Enable and set require_ssl in Foreman settings (note: requires passenger, SSL does not apply to kickstarts)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-unattended</td>
        <td>Should Foreman manage host provisioning as well</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-use-vhost</td>
        <td>Enclose apache configuration in VirtualHost tags</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-user</td>
        <td>User under which foreman will run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-user-groups</td>
        <td>Additional groups for the Foreman user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-version</td>
        <td>Foreman package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-vhost-priority</td>
        <td>Defines Apache vhost priority for the Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-websockets-encrypt</td>
        <td>Whether to encrypt websocket connections</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-websockets-ssl-cert</td>
        <td>SSL certificate file to use when encrypting websocket connections</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-websockets-ssl-key</td>
        <td>SSL key file to use when encrypting websocket connections</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-foreman-url</td>
        <td>URL on which Foreman runs</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-hammer-plugin-prefix</td>
        <td>Hammer plugin package prefix based normally on platform</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-manage-root-config</td>
        <td>Whether to manage /root/.hammer configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-password</td>
        <td>Password for authentication</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-refresh-cache</td>
        <td>Check API documentation cache status on each request</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-request-timeout</td>
        <td>API request timeout, set -1 for infinity</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-username</td>
        <td>Username for authentication</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-version</td>
        <td>foreman-cli package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-bind-host</td>
        <td>Host to bind ports to, e.g. *, localhost, 0.0.0.0</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-bmc</td>
        <td>Enable BMC feature</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-bmc-default-provider</td>
        <td>BMC default provider.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-bmc-listen-on</td>
        <td>BMC proxy to listen on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-custom-repo</td>
        <td>No need to change anything here by default if set to true, no repo will be added by this module, letting you to set it to some custom location.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-customrun-args</td>
        <td>Puppet customrun command arguments</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-customrun-cmd</td>
        <td>Puppet customrun command</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp</td>
        <td>Enable DHCP feature</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-config</td>
        <td>DHCP config file path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-gateway</td>
        <td>DHCP pool gateway</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-interface</td>
        <td>DHCP listen interface</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-key-name</td>
        <td>DHCP key name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-key-secret</td>
        <td>DHCP password</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-leases</td>
        <td>DHCP leases file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-listen-on</td>
        <td>DHCP proxy to listen on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-managed</td>
        <td>DHCP is managed by Foreman proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-nameservers</td>
        <td>DHCP nameservers, comma-separated</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-omapi-port</td>
        <td>DHCP server OMAPI port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-option-domain</td>
        <td>DHCP use the dhcpd config option domain-name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-provider</td>
        <td>DHCP provider</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-pxeserver</td>
        <td>DHCP "next-server" value, defaults otherwise to IP of dhcp_interface</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-range</td>
        <td>Space-separated DHCP pool range</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-search-domains</td>
        <td>DHCP search domains option</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-server</td>
        <td>Address of DHCP server to manage</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-subnets</td>
        <td>Subnets list to restrict DHCP management to</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dir</td>
        <td>Foreman proxy install directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns</td>
        <td>Enable DNS feature</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-forwarders</td>
        <td>DNS forwarders</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-interface</td>
        <td>DNS interface</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-listen-on</td>
        <td>DNS proxy to listen on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-managed</td>
        <td>DNS is managed by Foreman proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-provider</td>
        <td>DNS provider</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-reverse</td>
        <td>DNS reverse zone name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-server</td>
        <td>Address of DNS server to manage</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-tsig-keytab</td>
        <td>Kerberos keytab for DNS updates using GSS-TSIG authentication</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-tsig-principal</td>
        <td>Kerberos principal for DNS updates using GSS-TSIG authentication</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-ttl</td>
        <td>DNS default TTL override</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-zone</td>
        <td>DNS zone name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ensure-packages-version</td>
        <td>control extra packages version, it's passed to ensure parameter of package resource</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-foreman-base-url</td>
        <td>Base Foreman URL used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-foreman-ssl-ca</td>
        <td>SSL CA used to verify connections when accessing the Foreman API. When not specified, the ssl_ca is used instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-foreman-ssl-cert</td>
        <td>SSL client certificate used when accessing the Foreman API When not specified, the ssl_cert is used instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-foreman-ssl-key</td>
        <td>Corresponding key to a foreman_ssl_cert certificate When not specified, the ssl_key is used instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-freeipa-remove-dns</td>
        <td>Remove DNS entries from FreeIPA when deleting hosts from realm</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-gpgcheck</td>
        <td>Turn on/off gpg check in repo files (effective only on RedHat family systems)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-groups</td>
        <td>Array of additional groups for the foreman proxy user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-http</td>
        <td>Enable HTTP</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-http-port</td>
        <td>HTTP port to listen on (if http is enabled)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-keyfile</td>
        <td>DNS server keyfile path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-libvirt-connection</td>
        <td>Connection string of libvirt DNS/DHCP provider (e.g. "qemu:///system")</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-libvirt-network</td>
        <td>Network for libvirt DNS/DHCP provider</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-log</td>
        <td>Foreman proxy log file, 'STDOUT' or 'SYSLOG'</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-log-buffer</td>
        <td>Log buffer size</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-log-buffer-errors</td>
        <td>Additional log buffer size for errors</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-log-level</td>
        <td>Foreman proxy log level</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-logs</td>
        <td>Enable Logs (log buffer) feature</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-logs-listen-on</td>
        <td>Logs proxy to listen on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-manage-puppet-group</td>
        <td>Whether to ensure the $puppet_group exists.  Also ensures group owner of ssl keys and certs is $puppet_group Not applicable when ssl is false.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-manage-sudoersd</td>
        <td>Whether to manage File['/etc/sudoers.d'] or not.  When reusing this module, this may be disabled to let a dedicated sudo module manage it instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-mcollective-user</td>
        <td>The user for puppetrun_provider mcollective</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-consumer-key</td>
        <td>OAuth key to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-consumer-secret</td>
        <td>OAuth secret to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-effective-user</td>
        <td>User to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-version</td>
        <td>foreman plugins version, it's passed to ensure parameter of plugins package resource</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet</td>
        <td>Enable Puppet module for environment imports and Puppet runs</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-group</td>
        <td>Groups of Foreman proxy user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-listen-on</td>
        <td>Protocols for the Puppet feature to listen on</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-ssl-ca</td>
        <td>SSL CA used to verify connections when accessing the Puppet master API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-ssl-cert</td>
        <td>SSL certificate used when accessing the Puppet master API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-ssl-key</td>
        <td>SSL private key used when accessing the Puppet master API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-url</td>
        <td>URL of the Puppet master itself for API requests</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-use-cache</td>
        <td>Whether to enable caching of puppet classes</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-use-environment-api</td>
        <td>Override use of Puppet's API to list environments.  When unset, the proxy will try to determine this automatically.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-user</td>
        <td>Which user to invoke sudo as to run puppet commands</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetca</td>
        <td>Enable Puppet CA feature</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetca-cmd</td>
        <td>Puppet CA command to be allowed in sudoers</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetca-listen-on</td>
        <td>Protocols for the Puppet CA feature to listen on</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetdir</td>
        <td>Puppet var directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetrun-cmd</td>
        <td>Puppet run/kick command to be allowed in sudoers</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetrun-provider</td>
        <td>Provider for running/kicking Puppet agents</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-command</td>
        <td>The command used by puppetrun_provider puppetssh</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-keyfile</td>
        <td>The keyfile for puppetrun_provider puppetssh commands</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-sudo</td>
        <td>Whether to use sudo before commands when using puppetrun_provider puppetssh</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-user</td>
        <td>The user for puppetrun_provider puppetssh</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-wait</td>
        <td>Whether to wait for completion of the Puppet command over SSH and return the exit code</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm</td>
        <td>Enable realm management feature</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm-keytab</td>
        <td>Kerberos keytab path to authenticate realm updates</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm-listen-on</td>
        <td>Realm proxy to listen on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm-principal</td>
        <td>Kerberos principal for realm updates</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm-provider</td>
        <td>Realm management provider</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-register-in-foreman</td>
        <td>Register proxy back in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-registered-name</td>
        <td>Proxy name which is registered in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-registered-proxy-url</td>
        <td>Proxy URL which is registered in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-repo</td>
        <td>This can be stable, rc, or nightly</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-salt-puppetrun-cmd</td>
        <td>Salt command to trigger Puppet run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl</td>
        <td>Enable SSL, ensure feature is added with "https://" protocol if true</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-ca</td>
        <td>SSL CA to validate the client certificates used to access the proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-cert</td>
        <td>SSL certificate to be used to run the foreman proxy via https.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-disabled-ciphers</td>
        <td>List of OpenSSL cipher suite names that will be disabled from the default</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-key</td>
        <td>Corresponding key to a ssl_cert certificate</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-port</td>
        <td>HTTPS port to listen on (if ssl is enabled)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssldir</td>
        <td>Puppet CA SSL directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-template-url</td>
        <td>URL a client should use for provisioning templates</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-templates</td>
        <td>Enable templates feature</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-templates-listen-on</td>
        <td>Templates proxy to listen on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp</td>
        <td>Enable TFTP feature</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-dirs</td>
        <td>Directories to be create in $tftp_root</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-listen-on</td>
        <td>TFTP proxy to listen on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-manage-wget</td>
        <td>If enabled will install the wget package</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-managed</td>
        <td>TFTP is managed by Foreman proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-root</td>
        <td>TFTP root directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-servername</td>
        <td>Defines the TFTP Servername to use, overrides the name in the subnet declaration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-syslinux-filenames</td>
        <td>Syslinux files to install on TFTP (full paths)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-trusted-hosts</td>
        <td>Only hosts listed will be permitted, empty array to disable authorization</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-use-sudoersd</td>
        <td>Add a file to /etc/sudoers.d (true) or uses augeas (false)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-user</td>
        <td>User under which foreman proxy will run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-version</td>
        <td>foreman package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-additional-settings</td>
        <td>A hash of additional main settings.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent</td>
        <td>Should a puppet agent be installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent-additional-settings</td>
        <td>A hash of additional agent settings. Example: {stringify_facts => true}</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent-noop</td>
        <td>Run the agent in noop mode.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent-restart-command</td>
        <td>The command which gets executed on puppet service restart</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent-template</td>
        <td>Use a custom template for the agent puppet configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-allow-any-crl-auth</td>
        <td>Allow any authentication for the CRL. This is needed on the puppet CA to accept clients from a the puppet CA proxy.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-auth-allowed</td>
        <td>An array of authenticated nodes allowed to access all catalog and node endpoints. default to ['$1']</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-auth-template</td>
        <td>Use a custom template for the auth configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-autosign</td>
        <td>If set to a boolean, autosign is enabled or disabled for all incoming requests. Otherwise this has to be set to the full file path of an autosign.conf file or an autosign script. If this is set to a script, make sure that script considers the content of autosign.conf as otherwise Foreman functionality might be broken.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-autosign-entries</td>
        <td>A list of certnames or domain name globs whose certificate requests will automatically be signed. Defaults to an empty Array.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-autosign-mode</td>
        <td>mode of the autosign file/script</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-ca-port</td>
        <td>Puppet CA port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-ca-server</td>
        <td>Use a different ca server. Should be either a string with the location of the ca_server or 'false'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-classfile</td>
        <td>The file in which puppet agent stores a list of the classes associated with the retrieved configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-client-certname</td>
        <td>The node's certificate name, and the unique identifier it uses when requesting catalogs.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-client-package</td>
        <td>Install a custom package to provide the puppet client</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-codedir</td>
        <td>Override the puppet code directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-configtimeout</td>
        <td>How long the client should wait for the configuration to be retrieved before considering it a failure.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-cron-cmd</td>
        <td>Specify command to launch when runmode is set 'cron'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-dir</td>
        <td>Override the puppet directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-dir-group</td>
        <td>Group of the base puppet directory, used when puppet::server is false.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-dir-owner</td>
        <td>Owner of the base puppet directory, used when puppet::server is false.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-dns-alt-names</td>
        <td>Use additional DNS names when generating a certificate.  Defaults to an empty Array.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-environment</td>
        <td>Default environment of the Puppet agent</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-group</td>
        <td>Override the name of the puppet group.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-hiera-config</td>
        <td>The hiera configuration file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-listen</td>
        <td>Should the puppet agent listen for connections.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-listen-to</td>
        <td>An array of servers allowed to initiate a puppet run. If $listen = true one of three things will happen: 1) if $listen_to is not empty then this array will be used. 2) if $listen_to is empty and $puppetmaster is defined then only $puppetmaster will be allowed. 3) if $puppetmaster is not defined or empty, $fqdn will be used.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-logdir</td>
        <td>Override the log directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-main-template</td>
        <td>Use a custom template for the main puppet configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-manage-packages</td>
        <td>Should this module install packages or not. Can also install only server packages with value of 'server' or only agent packages with 'agent'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-module-repository</td>
        <td>Use a different puppet module repository</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-package-provider</td>
        <td>The provider used to install the agent. Defaults to chocolatey on Windows Defaults to undef elsewhere</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-package-source</td>
        <td>The location of the file to be used by the agent's package resource. Defaults to undef. If 'windows' or 'msi' are used as the provider then this setting is required.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-pluginfactsource</td>
        <td>URL to retrieve Puppet facts from during pluginsync</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-pluginsource</td>
        <td>URL to retrieve Puppet plugins from during pluginsync</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-pluginsync</td>
        <td>Enable pluginsync.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-port</td>
        <td>Override the port of the master we connect to.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-postrun-command</td>
        <td>A command which gets executed after each Puppet run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-prerun-command</td>
        <td>A command which gets executed before each Puppet run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-puppetmaster</td>
        <td>Hostname of your puppetmaster (server directive in puppet.conf)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-remove-lock</td>
        <td>Remove the agent lock when running.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-rundir</td>
        <td>Override the PID directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-runinterval</td>
        <td>Set up the interval (in seconds) to run the puppet agent.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-runmode</td>
        <td>Select the mode to setup the puppet agent.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server</td>
        <td>Should a puppet master be installed as well as the client</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-additional-settings</td>
        <td>A hash of additional settings. Example: {trusted_node_data => true, ordering => 'manifest'}</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-admin-api-whitelist</td>
        <td>The whitelist of clients that can query the puppet-admin-api endpoint Defaults to [ '127.0.0.1', '::1', $::ipaddress ]</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-app-root</td>
        <td>Directory where the application lives</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ca</td>
        <td>Provide puppet CA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ca-auth-required</td>
        <td>Whether client certificates are needed to access the puppet-admin api Defaults to true</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ca-client-whitelist</td>
        <td>The whitelist of client certificates that can query the certificate-status endpoint Defaults to [ '127.0.0.1', '::1', $::ipaddress ]</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ca-proxy</td>
        <td>The actual server that handles puppet CA. Setting this to anything non-empty causes the apache vhost to set up a proxy for all certificates pointing to the value.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-certname</td>
        <td>The name to use when handling certificates.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-check-for-updates</td>
        <td>Should the puppetserver phone home to check for available updates? Defaults to true</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-cipher-suites</td>
        <td>List of SSL ciphers to use in negotiation Defaults to [ 'TLS_RSA_WITH_AES_256_CBC_SHA256', 'TLS_RSA_WITH_AES_256_CBC_SHA', 'TLS_RSA_WITH_AES_128_CBC_SHA256', 'TLS_RSA_WITH_AES_128_CBC_SHA', ]</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-common-modules-path</td>
        <td>Common modules paths (only when $server_git_repo_path and $server_dynamic_environments are false)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-config-version</td>
        <td>How to determine the configuration version. When using git_repo, by default a git describe approach will be installed.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-connect-timeout</td>
        <td>How long the server will wait for a response to a connection attempt</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-default-manifest</td>
        <td>Toggle if default_manifest setting should be added to the [main] section</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-default-manifest-content</td>
        <td>A string to set the content of the default_manifest If set to '' it will not manage the file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-default-manifest-path</td>
        <td>A string setting the path to the default_manifest</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-dir</td>
        <td>Puppet configuration directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-directory-environments</td>
        <td>Enable directory environments, defaulting to true with Puppet 3.6.0 or higher</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-dynamic-environments</td>
        <td>Use $environment in the modulepath Deprecated when $server_directory_environments is true, set $server_environments to [] instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-enable-ruby-profiler</td>
        <td>Should the puppetserver ruby profiler be enabled? Defaults to false</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-enc-api</td>
        <td>What version of enc script to deploy. Valid values are 'v2' for latest, and 'v1' for Foreman =< 1.2</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environment-class-cache-enabled</td>
        <td>Enable environment class cache in conjunction with the use of the environment_classes API. Defaults to false</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environment-timeout</td>
        <td>Timeout for cached compiled catalogs (10s, 5m, ...)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments</td>
        <td>Environments to setup (creates directories). Applies only when $server_dynamic_environments is false</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments-group</td>
        <td>The group owning the environments directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments-mode</td>
        <td>Environments directory mode.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments-owner</td>
        <td>The owner of the environments directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-envs-dir</td>
        <td>Directory that holds puppet environments</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-envs-target</td>
        <td>Indicates that $envs_dir should be a symbolic link to this target</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-external-nodes</td>
        <td>External nodes classifier executable</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman</td>
        <td>Should foreman integration be installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-facts</td>
        <td>Should foreman receive facts from puppet</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-ca</td>
        <td>SSL CA of the Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-cert</td>
        <td>Client certificate for authenticating against Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-key</td>
        <td>Key for authenticating against Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-url</td>
        <td>Foreman URL</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-branch-map</td>
        <td>Git branch to puppet env mapping for the default post receive hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo</td>
        <td>Use git repository as a source of modules</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo-group</td>
        <td>Git repository group</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo-mode</td>
        <td>Git repository mode</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo-path</td>
        <td>Git repository path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo-user</td>
        <td>Git repository user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-group</td>
        <td>Name of the puppetmaster group.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-http</td>
        <td>Should the puppet master listen on HTTP as well as HTTPS. Useful for load balancer or reverse proxy scenarios. Note that the HTTP puppet master denies access from all clients by default, allowed clients must be specified with $server_http_allow.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-http-allow</td>
        <td>Array of allowed clients for the HTTP puppet master. Passed to Apache's 'Allow' directive.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-http-port</td>
        <td>Puppet master HTTP port; defaults to 8139.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-httpd-service</td>
        <td>Apache/httpd service name to notify on configuration changes. Defaults to 'httpd' based on the default apache module included with foreman-installer.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-idle-timeout</td>
        <td>How long the server will wait for a response on an existing connection</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-implementation</td>
        <td>Puppet master implementation, either "master" (traditional Ruby) or "puppetserver" (JVM-based)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ip</td>
        <td>Bind ip address of the puppetmaster</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-jruby-gem-home</td>
        <td>Where jruby gems are located for puppetserver</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-jvm-config</td>
        <td>Specify the puppetserver jvm configuration file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-jvm-extra-args</td>
        <td>Additional java options to pass through. This can be used for Java versions prior to Java 8 to specify the max perm space to use: For example: '-XX:MaxPermSpace=128m'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-jvm-java-bin</td>
        <td>Set the default java to use.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-jvm-max-heap-size</td>
        <td>Specify the maximum jvm heap space.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-jvm-min-heap-size</td>
        <td>Specify the minimum jvm heap space.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-main-template</td>
        <td>Which template should be used for master related configuration in the [main] section</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-max-active-instances</td>
        <td>Max number of active jruby instances. Defaults to processor count</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-max-requests-per-instance</td>
        <td>Max number of requests a jruby instances will handle. Defaults to 0 (disabled)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-package</td>
        <td>Custom package name for puppet master</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-parser</td>
        <td>Sets the parser to use. Valid options are 'current' or 'future'. Defaults to 'current'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-passenger</td>
        <td>If set to true, we will configure apache with passenger. If set to false, we will enable the default puppetmaster service unless service_fallback is set to false. See 'Advanced server parameters' for more information. Only applicable when server_implementation is "master".</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-passenger-min-instances</td>
        <td>The PassengerMinInstances parameter. Sets the minimum number of application processes to run. Defaults to the number of processors on your system.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-passenger-pre-start</td>
        <td>Pre-start the first passenger worker instance process during httpd start.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-passenger-ruby</td>
        <td>The PassengerRuby parameter. Sets the Ruby interpreter for serving the puppetmaster rack application.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-port</td>
        <td>Puppet master port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-post-hook-content</td>
        <td>Which template to use for git post hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-post-hook-name</td>
        <td>Name of a git hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppet-basedir</td>
        <td>Where is the puppet code base located</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppetdb-host</td>
        <td>PuppetDB host</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppetdb-port</td>
        <td>PuppetDB port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppetdb-swf</td>
        <td>PuppetDB soft_write_failure</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppetserver-dir</td>
        <td>The path of the puppetserver config dir</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppetserver-logdir</td>
        <td>The path of the puppetserver log dir</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppetserver-rundir</td>
        <td>The path of the puppetserver run dir</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppetserver-vardir</td>
        <td>The path of the puppetserver var dir</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppetserver-version</td>
        <td>The version of puppetserver 2 installed (or being installed) Unfortunately, different versions of puppetserver need configuring differently, and there's no easy way of determining which version is being installed. Defaults to '2.3.1' but can be overriden if you're installing an older version.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-rack-arguments</td>
        <td>Arguments passed to rack app ARGV in addition to --confdir and --vardir.  The default is an empty array.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-report-api</td>
        <td>What version of report processor to deploy. Valid values are 'v2' for latest, and 'v1' for Foreman =< 1.2</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-reports</td>
        <td>List of report types to include on the puppetmaster</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-request-timeout</td>
        <td>Timeout in node.rb script for fetching catalog from Foreman (in seconds).</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ruby-load-paths</td>
        <td>List of ruby paths Defaults based on $::puppetversion</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-service-fallback</td>
        <td>If passenger is not used, do we want to fallback to using the puppetmaster service? Set to false if you disabled passenger and you do NOT want to use the puppetmaster service. Defaults to true.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ssl-dir</td>
        <td>SSL directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ssl-dir-manage</td>
        <td>Toggle if ssl_dir should be added to the [master] configuration section. This is necessary to disable in case CA is delegated to a separate instance</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ssl-protocols</td>
        <td>Array of SSL protocols to use. Defaults to [ 'TLSv1.2' ]</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-storeconfigs-backend</td>
        <td>Do you use storeconfigs? (note: not required) false if you don't, "active_record" for 2.X style db, "puppetdb" for puppetdb</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-strict-variables</td>
        <td>if set to true, it will throw parse errors when accessing undeclared variables.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-template</td>
        <td>Which template should be used for master configuration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-use-legacy-auth-conf</td>
        <td>Should the puppetserver use the legacy puppet auth.conf? Defaults to false (the puppetserver will use its own conf.d/auth.conf)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-user</td>
        <td>Name of the puppetmaster user.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-version</td>
        <td>Custom package version for puppet master</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-service-name</td>
        <td>The name of the puppet agent service.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-sharedir</td>
        <td>Override the system data directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-show-diff</td>
        <td>Show and report changed files with diff output</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-splay</td>
        <td>Switch to enable a random amount of time to sleep before each run.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-splaylimit</td>
        <td>The maximum time to delay before runs. Defaults to being the same as the run interval. This setting can be a time interval in seconds (30 or 30s), minutes (30m), hours (6h), days (2d), or years (5y).</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-srv-domain</td>
        <td>Search domain for SRV records</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-ssldir</td>
        <td>Override where SSL certificates are kept.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-syslogfacility</td>
        <td>Facility name to use when logging to syslog</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-systemd-cmd</td>
        <td>Specify command to launch when runmode is set 'systemd.timer'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-systemd-unit-name</td>
        <td>The name of the puppet systemd units.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-unavailable-runmodes</td>
        <td>Runmodes that are not available for the current system. This module will not try to disable these modes. Default is [] on Linux, ['cron', 'systemd.timer'] on Windows and ['systemd.timer'] on other systems.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-use-srv-records</td>
        <td>Whether DNS SRV records will be used to resolve the Puppet master</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-usecacheonfailure</td>
        <td>Switch to enable use of cached catalog on failure of run.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-user</td>
        <td>Override the name of the puppet user.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-vardir</td>
        <td>Override the puppet var directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-version</td>
        <td>Specify a specific version of a package to install. The version should be the exact match for your distro. You can also use certain values like 'latest'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-image-name</td>
        <td>tarball with images</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-install-images</td>
        <td>should the installer download and setup discovery images for you? the average size is few hundreds of MB</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-source-url</td>
        <td>source URL to download from</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-tftp-root</td>
        <td>TFTP root to install image into</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-memcache-compress</td>
        <td>will gzip-compress values larger than 1K</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-memcache-expires-in</td>
        <td>global default for key TTL in seconds</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-memcache-hosts</td>
        <td>an array of hosts running memcache</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-memcache-namespace</td>
        <td>prepends each key with this value to provide simple namespacing</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-ovirt-provision-package</td>
        <td>Package name to install, use ruby193-rubygem-ovirt_provision_plugin on Foreman 1.8/1.9 on EL</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-puppetdb-address</td>
        <td>Address of puppetdb API. Defaults to 'https://localhost:8081/v2/commands'</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-puppetdb-dashboard-address</td>
        <td>Address of puppetdb dashboard. Defaults to 'http://localhost:8080/dashboard'</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-puppetdb-package</td>
        <td>Package name to install, use ruby193-rubygem-puppetdb_foreman on Foreman 1.8/1.9 on EL</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-tasks-package</td>
        <td>Package name to install, use ruby193-rubygem-foreman-tasks on Foreman 1.8/1.9 on EL</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-tasks-service</td>
        <td>Service name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-compute-ec2-version</td>
        <td>Package version to install, defaults to installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-compute-gce-version</td>
        <td>Package version to install, defaults to installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-compute-libvirt-version</td>
        <td>Package version to install, defaults to installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-compute-openstack-version</td>
        <td>Package version to install, defaults to installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-compute-ovirt-version</td>
        <td>Package version to install, defaults to installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-compute-rackspace-version</td>
        <td>Package version to install, defaults to installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-compute-vmware-version</td>
        <td>Package version to install, defaults to installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-abrt-send-log-file</td>
        <td>Log file for the forwarding script.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-aggregate-reports</td>
        <td>Merge duplicate reports before sending</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-enabled</td>
        <td>Enables/disables the plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-faf-server-ssl-cert</td>
        <td>Enable client authentication to FAF server: set ssl certificate</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-faf-server-ssl-key</td>
        <td>Enable client authentication to FAF server: set ssl key</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-faf-server-ssl-noverify</td>
        <td>Set to true if FAF server uses self-signed certificate</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-faf-server-url</td>
        <td>FAF server instance the reports will be forwarded to</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-group</td>
        <td>group owner of the configuration file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-listen-on</td>
        <td>Proxy feature listens on http, https, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-send-period</td>
        <td>Period (in seconds) after which collected reports are forwarded. Meaningful only if smart-proxy-abrt-send is run as a daemon (not from cron).</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-spooldir</td>
        <td>Directory where uReports are stored before they are sent</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-abrt-version</td>
        <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-ansible-dir</td>
        <td>Ansible directory to search for available roles</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-enabled</td>
        <td>Enables/disables the plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-listen-on</td>
        <td>Proxy feature listens on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-working-dir</td>
        <td>A directory where the playbooks will be generated. A tmp directory will be created when left blank</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-client-name</td>
        <td>chef client name used for authentication of other client requests</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-enabled</td>
        <td>enables/disables the plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-group</td>
        <td>group owner of the configuration file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-listen-on</td>
        <td>Proxy feature listens on http, https, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-private-key</td>
        <td>path to file containing private key for $client_name client</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-server-url</td>
        <td>chef server url</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-ssl-pem-file</td>
        <td>if $ssl_verify is true you can specify a path to a file which contains certificate and related private key if the certificate is not globally trusted</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-ssl-verify</td>
        <td>should we perform chef server ssl cert verification? this requires CA certificate installed and trusted</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-chef-version</td>
        <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dhcp-infoblox-password</td>
        <td>The password of the Infoblox user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dhcp-infoblox-record-type</td>
        <td>Record type to manage, can be "host" or "fixedaddress"</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dhcp-infoblox-use-ranges</td>
        <td>Use pre-definded ranges in networks to find available IP's</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dhcp-infoblox-username</td>
        <td>The username of the Infoblox user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-discovery-image-name</td>
        <td>tarball with images</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-discovery-install-images</td>
        <td>should the discovery image be downloaded and extracted</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-discovery-source-url</td>
        <td>source URL to download from</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-discovery-tftp-root</td>
        <td>tftp root to install image into</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-infoblox-dns-server</td>
        <td>The address of the Infoblox server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-infoblox-password</td>
        <td>The password of the Infoblox user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-infoblox-username</td>
        <td>The username of the Infoblox user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-powerdns-backend</td>
        <td>The backend to select, either mysql or postgresql.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-powerdns-manage-database</td>
        <td>Whether to manage the database. Only works for mysql. Includes the mysql server.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-powerdns-mysql-database</td>
        <td>MySQL server database. Only used when the backend is mysql.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-powerdns-mysql-hostname</td>
        <td>MySQL server hostname. Only used when the backend is mysql.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-powerdns-mysql-password</td>
        <td>MySQL server password. Only used when the backend is mysql.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-powerdns-mysql-username</td>
        <td>MySQL server username. Only used when the backend is mysql.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-powerdns-pdnssec</td>
        <td>pdnssec command to run rectify-zone with. Can be an empty string.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-powerdns-postgresql-connection</td>
        <td>The postgresql connection string.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-console-auth</td>
        <td>Whether to enable trusted hosts and ssl for the dynflow console</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-core-listen</td>
        <td>Address to listen on for the dynflow core service</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-core-port</td>
        <td>Port to use for the local dynflow core service</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-database-path</td>
        <td>Path to the SQLite database file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-enabled</td>
        <td>Enables/disables the plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-listen-on</td>
        <td>Proxy feature listens on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-configure-openscap-repo</td>
        <td>Enable custom yum repo with packages needed for smart_proxy_openscap,</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-contentdir</td>
        <td>Directory where OpenSCAP content XML are stored So we will not request the XML from Foreman each time</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-enabled</td>
        <td>enables/disables the plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-failed-dir</td>
        <td>Directory where OpenSCAP report XML are stored In case sending to Foreman succeeded, yet failed to save to reportsdir</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-listen-on</td>
        <td>Proxy feature listens on http, https, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-openscap-send-log-file</td>
        <td>Log file for the forwarding script</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-reportsdir</td>
        <td>Directory where OpenSCAP report XML are stored So Foreman can request arf xml reports</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-spooldir</td>
        <td>Directory where OpenSCAP audits are stored before they are forwarded to Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-version</td>
        <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-enabled</td>
        <td>enables/disables the pulp plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-group</td>
        <td>group owner of the configuration file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-listen-on</td>
        <td>proxy feature listens on http, https, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-mongodb-dir</td>
        <td>directory for Mongo DB</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-pulp-content-dir</td>
        <td>directory for pulp content</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-pulp-dir</td>
        <td>directory for pulp</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-pulp-url</td>
        <td>pulp url to use</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-pulpnode-enabled</td>
        <td>enables/disables the pulpnode plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-puppet-content-dir</td>
        <td>directory for puppet content</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-version</td>
        <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-enabled</td>
        <td>Enables/disables the plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-generate-keys</td>
        <td>Automatically generate SSH keys</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-listen-on</td>
        <td>Proxy feature listens on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-local-working-dir</td>
        <td>Local working directory on the smart proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-remote-working-dir</td>
        <td>Remote working directory on clients</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-ssh-identity-dir</td>
        <td>Directory where SSH keys are stored</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-ssh-identity-file</td>
        <td>Provide an alternative name for the SSH keys</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-ssh-ssh-keygen</td>
        <td>Location of the ssh-keygen binary</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-api</td>
        <td>Use Salt API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-api-auth</td>
        <td>Salt API auth mechanism</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-api-password</td>
        <td>Salt API password</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-api-url</td>
        <td>Salt API URL</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-api-username</td>
        <td>Salt API username</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-autosign-file</td>
        <td>File to use for salt autosign</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-enabled</td>
        <td>Enables/disables the plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-group</td>
        <td>Owner of plugin configuration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-listen-on</td>
        <td>Proxy feature listens on https, http, or both</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-salt-user</td>
        <td>User to run salt commands under</td>
      </tr>
    </tbody>
  </table>
</div>

#### Answers file

The answers file describes the classes that will be applied to the host to
install Foreman, along with their parameters.  The foreman-installer package stores it at `/etc/foreman-installer/scenarios.d/foreman-answers.yaml`.  By default, the *all-in-one* setup will include Foreman, a puppetmaster, Puppet agent, and the Smart Proxy:

{% highlight yaml %}
---
foreman:
  custom_repo: true
  email_config_method: database
foreman_proxy:
  custom_repo: true
puppet:
  server: true
{% endhighlight %}

Other examples are given in the next section, or `/usr/share/foreman-installer/README.md`.

#### Advanced module configuration

Additional configuration options can be given in `/etc/foreman-installer/custom-hiera.yaml` for some of the Puppet modules that are used internally by Foreman installer. The contents of this file will be passed to Hiera during the Foreman installer execution so can set class parameters for other modules such as `apache`, `mysql`, and `postgresql`.

For example, the `TraceEnable` option may be controlled by disabling the `apache::trace_enable` parameter in this file:

{% highlight yaml %}
apache::trace_enable: Off
{% endhighlight %}

Please note that the parameters used by these modules may change between versions of Foreman, so it's important to check the versions in use and the appropriate module documentation or source code when editing this configuration file. Modifications cannot be supported or migrated by Foreman.
